@@ -1,5 +1,10 @@
 2005-07-04  Nathaniel Smith  <njs@codesourcery.com>
 
+	* globish.cc (checked_globish_to_regex): Make the special case for
+	the empty pattern, actually work.  Unit tests now pass.
+
+2005-07-04  Nathaniel Smith  <njs@codesourcery.com>
+
 	* netcmd.cc (test_netcmd_functions): Update for new anonymous/auth
 	packet formats.
 
